doc/_static/style.css
:root {
  --a-color-dark: rgb(31, 92, 153);
  --a-color: rgb(41, 122, 204);
  --a-hover-color: rgb(102, 179, 255);
}
html {
  position: relative;
  min-height: 100%;
}

body {
    margin-bottom: 150px;
}

.navbar-version {
    display: none;
}

a {
    color: var(--a-color);
    text-decoration: none;
}

a:hover {
    color: var(--a-hover-color);
}

blockquote {
    font-size: 100% !important;
}

.devbar {
    text-align: center;
    padding: 5px;
    margin-bottom: 5px;
}

#navbar a:hover {
    color: rgb(242, 80, 80);
}

div.crop-wrapper {
  width: 380px;
  height: 190px;
  overflow: hidden
}

a.button-front {
    width: 32%;
    height: 100%;
    margin: 5px;
    float:left;
    background-color: #e7e7e7;
    color: black;
    border: 1px solid;
    font-size: larger;
    display: flex;
    align-items: center;
    justify-content: center;
}

.anchor-doc {
    position: relative;
    padding-top: 200px !important;
    display: none !important;

}

a code {
    color: var(--a-color);
}
a:hover code {
    color: var(--a-hover-color);
}
.note a, .note a code {
    color: var(--a-color-dark);
}
.note a:hover, .note a:hover code {
    color: var(--a-color);
}
.note {
    background-color: rgb(204, 230, 255);
    color: rgb(0, 0, 0);
    border: none;
}
.note pre {
    background-color: rgb(242, 249, 255);
}
.warning {
    background-color: rgb(230, 57, 57);
    color: white;
}
.warning a, .warning a code {
    color: rgb(255, 238, 0);
}
.warning a:hover, .warning a:hover code {
    color: rgb(255, 200, 60);
}

blockquote {
  padding: 0 0 0 15px;
  margin: 0 0 20px;
  border-left: 5px solid #eeeeee;
}

.span.box {
    width: 47%;
    height: 230px;
    float: left;
    border-radius: 20px;
    background: rgb(242, 249, 255);
    border-style: solid;
    border-color: rgb(143, 173, 204);
    margin: 5px;
    padding: 0px 0px 0px 10px;
}

.span h2 {
    background: rgb(242, 249, 255);
}
/* OVERRIDES */
div.sphx-glr-download {
  width: inherit;
}
div.sphx-glr-footer {
  width: fit-content;
}
div.sphx-glr-download a {
  background-color: rgb(230, 242, 255);
  background-image: inherit;
  border: 1px solid #000;
  color: inherit;
  width: fit-content;
  display: inherit;
  font-weight: inherit;
  padding: 0px;
  text-align: center;
}
div.sphx-glr-download a:hover {
  box-shadow: inset 0 1px 0 rgba(255,255,255,.1), 0 1px 5px rgba(0,0,0,.25);
  text-decoration: none;
  background-image: none;
  background-color: inherit;
}
/* hide the top link */
div.sphx-glr-download-link-note {
  height: 0px;
  visibility: hidden;
}
dt:target, .highlighted {
    background-color: rgb(255, 238, 0);
}
dt:target code {
    color: inherit !important;
    background-color: inherit !important;
}
div.sidebar {
    background-color: rgb(221, 236, 236) !important;
    border: 1px solid rgb(164, 195, 195) !important;
    border-radius: 4px;
}
.label {  /* Necessary for multiple refs, from bootstrap.min.css:7 */
    color: #2c3e50;
}
/* Override bootstrap.min.css to avoid .. container:: padding problems */
.nosize {
    width:  auto;
}
.nopad {
    padding:  0px;
}
.halfpad {
    margin-left: 1%;
    margin-right: 1%;
    width: 48%;
    padding:  0px;
    margin: 10px;
    float: left;
}
.table.midvalign td {
    vertical-align: middle;
    border-width: 2px;
}
.table.midvalign th {
    border-width: 2px;
    border-top-width: 2px;
}
/* our carousel */
.chopper {
    overflow: hidden;
    height: 250px;
}
.carousel-image {
    position: absolute;
    width: 100%;
    opacity: 1.0;
    left: 50%;
    top: 50%;
    transform: translateY(-50%) translateX(-50%);
}

.cont{
    width: 100%;
    display: table;
    border-spacing: 20px 5px;
}
.cont:before {
    content: "";
}
.cont:after {
    content: "";
}
.btn-cont {
    display: table-cell;
    width: 100%;
}
.footer {
    position: absolute;
    bottom: 0;
    width: 100%;
}
.footer a {
    font-weight: 700;
}
.support-front {
    font-size: 10px;
}
.support-front ul{
    list-style-type: none;
}
.ul-2col ul{
    columns: 2;
}
.carousel-caption {
    text-shadow: 0 1px 1px rgba(0,0,0,1.0);
    background-color: rgba(0,0,0,0.5);
    box-shadow: 0 0 5px rgba(0,0,0,0.5);
}
.carousel-caption p {
    font-size: 16px;
}
.support-front ul {
    padding-left: 15px;
}
.topmargin {
    margin-top: 10px;
}
.bottommargin {
    margin-bottom: 10px;
}
h4.list-group-item-heading {
    font-size: 15px;
}
.table-like {
    display: table;
}
.cell-like {
    display: table-cell;
    vertical-align: middle;
    float: none;
}
.limitedwidth {
    max-width: 1024px;
    float: none;
    margin: auto;
}
.tagline {
    font-size: 20px;
}
/* Fix collapsing */
@media (max-width: 991px) {
  .navbar-header {
      float: none;
  }
  .navbar-left,.navbar-right {
      float: none !important;
  }
  .navbar-toggle {
      display: block;
  }
  .navbar-collapse {
      border-top: 1px solid transparent;
      box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
  }
  .navbar-fixed-top {
      top: 0;
      border-width: 0 0 1px;
  }
  .navbar-collapse.collapse {
      display: none!important;
  }
  .navbar-nav {
      float: none!important;
      margin-top: 7.5px;
  }
  .navbar-nav>li {
      float: none;
  }
  .navbar-nav>li>a {
      padding-top: 10px;
      padding-bottom: 10px;
  }
  .collapse.in{
      display:block !important;
  }
}
details.example_details summary {
    font-weight: bold;
}
.panel {
    margin-bottom: 3px;
}

.skinnytable {
    width: auto;
}
.skinnytable thead {
    border-bottom: 1px solid black;
}
/* Unify color of refs and classes in parameter lists */
span.classifier a span.xref, span.classifier a code.docutils.literal.notranslate, span.classifier a.reference.external {
    color: var(--a-color);
}
span.classifier a:hover span.xref, span.classifier a:hover code.docutils.literal.notranslate, span.classifier a.reference.external:hover {
    color: var(--a-hover-color);
}

/* Allow easier copy-paste in code blocks */
div.highlight-console div.highlight span.gp {
  -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
       -moz-user-select: none; /* Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome and Opera */
}
/* Sizing */
.body {
    max-width: unset !important;
    min-width: unset !important;
}
/* Callout */
.callout {
    padding: 20px;
    margin: 20px 0;
    border: 1px solid #eee;
    border-left-width: 5px;
    border-left-color: #ddd;
    /* background-color: #eee; */
}
.callout h3:first-child {
    margin-top: 0;
}
.callout p:last-child {
    margin-bottom: 0;
}
dl.cmd-list span.option {
    white-space: nowrap;
}
dl.cmd-list dt, dl.cmd-list dd {
    margin-top: 5px;
    margin-bottom: 5px;
    padding-top: 0px;
    padding-bottom: 5px;
    text-align: left;
    border-bottom: 1px solid #ddd;
}
dl.cmd-list dt::after {
    visibility: hidden;
}
/* Attributes / methods not taking up entire width ends up looking odd */
dd table.align-center {
    width: 100%;
}
/* institutions logos in footer */
div.institutions {
    text-align: center;
  }
div.institutions a {
    border: 0px;
}
.institution_xs .institution_sm .institution_md .institution_lg {
    margin-right: 6px;
    vertical-align: middle;
  }
  .institution_xs {
    max-height: 22px;
  }
  .institution_sm {
    max-height: 32px;
  }
  .institution_md {
    max-height: 42px;
  }
  .institution_lg {
    max-height: 52px;
  }

